--- a/src/config/translation/ar.json
+++ b/src/config/translation/ar.json
@@ -1,5 +1,63 @@
 {
-    "login":{
-        "title":"Login 222"
+  "login": {
+    "title": "تسجيل الدخول",
+    "email": "الايميل",
+    "password": "كلمة السر",
+    "or": "  أنشأ حسابك   "
+  },
+  "register": {
+    "title": "أنشاء حساب ",
+    "email": "الايميل",
+    "name": "الأسم",
+    "password": "كلمة السر",
+    "rePassword": "اعاده ادخال كلمة السر"
+  },
+  "coinOfGame": {
+    "title": "العب مع ناس محترفين و اثبت نفسك. ",
+
+    "playNow": "ألعب الأن",
+    "coin": "الدخول"
+  },
+  "home": {
+    "Wallet ": "محفظتي",
+    "playWith": "ألعب مع",
+    "shareGame": "شارك اللعبة",
+    "friend": "صديقك  ",
+    "playNow": " ألعب الأن"
+  },
+
+  "changeStore": {
+    "change": "أستبدل الأن",
+
+    "orderModel": {
+      "confirmReplacement": "هل تريد تأكيد استبدال هذا المنتج؟",
+      "productName": "اسم المنتج :   ",
+      "tokensDue": " عدد التوكنز المستحقة :  ",
+      "replace": "استبدال",
+      "cancel": "إلغاء"
     }
+  },
+  "user": {
+    "total": "مجموع البارايات التي فزت بها",
+    "coins": "النقود",
+    "level": "المستوي",
+    "return": "العوده للصفحة السابقة",
+    "change": "تعديل",
+    "edit": "تعديل البيانات",
+    "name": " الأسم الجديد",
+    "email": "الايميل",
+    "oldPassword": " كلمة السر القديمة",
+    "password": "  كلمة السر الجديدة"
+  },
+  "playWith":{
+    "title":" ألانضمام الي الغرفة الان    ",
+    "create":"انشاء غرفة ",
+    "joinRoom":"الأنضمام الي غرفة",
+    "join":"الأنضمام",
+    "back": "العوده الي الصفخة السابقة"
+
+  },
+  "logOut": {
+    "logOut": "تسجيل الخروج"
+  }
 }
