--- a/src/config/translation/ar.json
+++ b/src/config/translation/ar.json
@@ -43,11 +43,13 @@
     "level": "المستوي",
     "return": "العوده للصفحة السابقة",
     "change": "تعديل",
+    "changePassword": " تعديل كلمة السر",
     "edit": "تعديل البيانات",
     "name": " الأسم الجديد",
     "email": "الايميل",
     "oldPassword": " كلمة السر القديمة",
-    "password": "  كلمة السر الجديدة"
+    "newPassword": "  كلمة السر الجديدة",
+    "confirmPassword": "   تأكيد كلمة السر "
   },
   "playWith":{
     "title":" ألانضمام الي الغرفة الان    ",
