--- a/src/config/translation/ar.json
+++ b/src/config/translation/ar.json
@@ -47,9 +47,9 @@
     "edit": "تعديل البيانات",
     "name": " الأسم الجديد",
     "email": "الايميل",
-    "oldPassword": " كلمة السر القديمة",
-    "newPassword": "  كلمة السر الجديدة",
-    "confirmPassword": "   تأكيد كلمة السر "
+    "password": "كلمة السر الجديدة",
+    "rePassword": "تأكيد كلمة السر",
+    "oldPassword": "كلمة السر القديمة"
   },
   "playWith":{
     "title":" ألانضمام الي الغرفة الان    ",
