--- a/src/config/translation/ar.json
+++ b/src/config/translation/ar.json
@@ -3,10 +3,13 @@
     "title": "تسجيل الدخول",
     "email": "الايميل",
     "password": "كلمة السر",
-    "or": "  أنشأ حسابك   "
+    "or": "  أنشأ حسابك   ",
+    "forgetPassword":"نسيت كلمة السر !"
   },
   "register": {
     "title": "أنشاء حساب ",
+    "phone": "رقم الهاتف",
+
     "email": "الايميل",
     "name": "الأسم",
     "password": "كلمة السر",
@@ -58,6 +61,10 @@
     "join":"الأنضمام",
     "back": "العوده الي الصفخة السابقة"
 
+  },
+  "coin" : {
+    "changeStore":"تغير الكوينز",
+    "card":"شراء الكوينز"
   },
   "logOut": {
     "logOut": "تسجيل الخروج"
