--- a/src/config/translation/ar.json
+++ b/src/config/translation/ar.json
@@ -43,6 +43,8 @@
   "user": {
     "total": "مجموع البارايات التي فزت بها",
     "coins": "النقود",
+    "phone": "رقم الهاتف",
+
     "level": "المستوي",
     "return": "العوده للصفحة السابقة",
     "change": "تعديل",
@@ -65,6 +67,29 @@
   "coin" : {
     "changeStore":"تغير الكوينز",
     "card":"شراء الكوينز"
+  },
+  "forgetPassword":{
+    "forget":"نسيت كلمة السر",
+    "title":"          من فضلك قم بادخال البريد الالكتروني ليصلك كود التحقق         ",
+    "email":"الايميل",
+    "send":"أرسال"
+  },
+  "otp":{
+    "verification":" كود التحقق",
+    "title":"من فضلك قم بادخال كود التحقق الذي وصل لك ",
+    "verify":"تحقق "
+
+  },
+  "forgetPasswordChange":{
+    "create":"قم بأنشاء كلمة سر جديد",
+    "title":"من فضلك قم بادخال كلمة السر الجديدة"  ,
+        "newPassword": "كلمة السر الجديدة",
+    "rePassword": "تأكيد كلمة السر",
+    "oldPassword": "كلمة السر القديمة",
+    "save":"حفظ"
+  },
+  "card":{
+    "buy":"الذهاب الي صفحة الدفع"
   },
   "logOut": {
     "logOut": "تسجيل الخروج"
