--- a/src/config/translation/en.json
+++ b/src/config/translation/en.json
@@ -46,6 +46,8 @@
     "total": "Total matches won",
     "coins": "Coins",
     "level": "Level",
+    "phone": "Phone Number",
+
     "return": "Return to previous page",
     "change": "Change Now",
     "changePassword": " Change Password",
@@ -68,6 +70,29 @@
   "coin" : {
     "changeStore":"Change Store",
     "card":"Buy Coins"
+  },
+  "forgetPassword":{
+    "forget":"Forget Password",
+    "title":"                Please enter your Email Address to receive a Verification Code    ",
+    "email":"Email",
+    "send":"send"
+  },
+  "otp":{
+    "verification":"Verification Code",
+    "title":"Please enter the digit code you have received.",
+    "verify":"Verify"
+
+  },
+  "forgetPasswordChange":{
+    "create":"Create New Password",
+    "title":"Please insert your new password",
+    "oldPassword" :"Old Password",
+    "newPassword" :"New Password",
+    "rePassword" :"Confirm Password",
+    "save":"save"
+  },
+  "card":{
+    "buy":"Go to payment page"
   },
   "logOut": {
     "logOut": "Log Out"
