--- a/src/config/translation/ar.json
+++ b/src/config/translation/ar.json
@@ -85,11 +85,10 @@
     "title":"من فضلك قم بادخال كلمة السر الجديدة"  ,
         "newPassword": "كلمة السر الجديدة",
     "rePassword": "تأكيد كلمة السر",
-    "oldPassword": "كلمة السر القديمة",
-    "save":"حفظ"
+     "save":"حفظ"
   },
   "card":{
-    "buy":"الذهاب الي صفحة الدفع"
+    "buy":"شراء"
   },
   "logOut": {
     "logOut": "تسجيل الخروج"
